5-talos/k8s-application/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-there
spec:
  rules:
  - host: konzek.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-there
            port:
              number: 80
  ingressClassName: nginx
